# haskell-course

./: tags
.virtual_documents/lessons/: 04-Pattern-matching.ipynb  17-Semigroup-and-Monoid.ipynb  18-Functor.ipynb
Homework/Homework01/: Homework01.hs
Homework/Homework02/: Homework02.hs
Homework/Homework03/: Homework03.hs
Homework/Homework04/: Homework04.hs
Homework/Homework05/: Homework05.hs
Homework/Homework06/: Homework06.hs
Homework/Homework07/: Homework07.hs
Homework/Homework08/: Homework.hs
Homework/Homework09/: 1-Maze.hs  2-Forest.hs
Homework/Homework10/: Homework.hs
Homework/Homework11/: Homework.hs
Homework/Homework14/ForestGameHWSolution/: ForestGame.cabal
Homework/Homework14/ForestGameHWSolution/app/: Main.hs
Homework/Homework14/ForestGameHWSolution/src/User/Actions/: Battle.hs
Homework/Homework15/: README.md  pp
Homework/Homework15/app/: Homework15A.hs
Homework/Homework15/src/: Homework15B.hs
Homework/Homework17/: Monoid.hs  Semigroup.hs
Homework/Homework18/: Homework.hs
Homework/Homework19/: Homework19.hs
lessons/: 04-Pattern-matching.ipynb  14-Cabal_and_language_extensions.ipynb  15-Handling-Errors.ipynb  17-Semigroup-and-Monoid.ipynb  18-Functor.ipynb
